# sonic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  about.toml  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ffmpeg-build-configuration.txt  metadata-claims-boundary.md  sidecar-schema.md
licenses/: YT-DLP-ZIPIMPORT-LICENSES.txt
scripts/: cargo-about.hbs  check-bundle-budget.mjs  fetch-tools.ps1  generate-license-report.ps1  generate-npm-notices.ps1  generate-updater-manifest.ps1  install-media-engine.ps1  smoke-test-installer.ps1  test-media-engine-e2e.ps1  test-smoke-test-installer.ps1  test-updater-manifest.ps1  tool-manifest.json  validate-release-version.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: acquisition.rs  commands.rs  error.rs  filesystem.rs  jobs.rs  lib.rs  main.rs  metadata.rs  models.rs  presets.rs  preview.rs  sidecar.rs  storage.rs  tools.rs
src-tauri/windows/: installer-hooks.nsh
src/app/: SonicApp.tsx  SonicProvider.tsx  state.ts
src/components/: Rail.tsx
src/domain/: defaults.ts  filename.ts  format.ts  queue.ts  types.ts
src/fixtures/: preview.ts
src/services/: bridge-types.ts  bridge.ts  native.ts  normalizers.ts  (+1 more)
tests/: VERIFICATION.md  app-smoke.test.tsx  contracts.test.ts  filename.test.ts  format.test.ts  native-hydration.test.ts  preview-queue.test.ts  queue-actions.test.ts  setup.ts  state.test.ts  updater.test.ts
(+12 files in other folders)
