[package]
name = "sonic"
version = "0.1.4"
description = "Sonic - a local media intake and music metadata companion for beat producers"
authors = ["Eternia Studios"]
license-file = "../LICENSE"
repository = "https://github.com/eterniastudio/sonic"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "=0.10.9"
